# osxmetadata

./: .all-contributorsrc  .bumpversion.cfg  .gitignore  .sourcery.yaml  404.html  AUTHOR.md  CHANGELOG.md  CONTRIBUTING.md  COPYING.md  LICENSE  LICENSE.md  README.md  README_DEV.md  cli.py  dev_requirements.txt  dodo.py  index.html  make_cli_exe.sh  mkdocs.yml  objects.inv  osxmetadata.py  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: python-package.yml  pythonpackage.yml
.pytest_cache/v/cache/: lastfailed
docs/: index.md
osxmetadata/: __init__.py  __main__.py  _applescript.py  _constants.py  _version.py  attributes.py  backup.py  classes.py  cmd_line.py  constants.py  datetime_utils.py  debug.py  finder_comment.py  finder_info.py  finder_tags.py  findercomments.py  findertags.py  mditem.py  nsurl_metadata.py  osxmetadata.py  utils.py  version.py
osxmetadata.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
osxmetadata/attribute_data/: README.md  __init__.py  audio_attributes.json  common_attributes.json  filesystem_attributes.json  image_attributes.json  load_attribute_data.py  mdimporter_constants.json  nsurl_resource_keys.json  video_attributes.json
search/: search_index.json
tests/: README.md  __init__.py  conftest.py  test_audio.m4a  test_bool_attributes.py  test_cli.py  test_datetime_attributes.py  test_datetime_handling.py  test_datetime_utils.py  test_download_date.py  test_finder_info.py  test_finder_tags.py  test_findercomment.py  test_finderinfo.py  test_int_attributes.py  test_list_attributes.py  test_mditem_attributes.py  test_nsurl_attributes.py  test_osxmetada_asdict.py  test_osxmetada_path.py  test_osxmetadata.py  test_osxmetadata_exceptions.py  test_osxmetdata.py  test_osxphotos_attributes.py  test_str_attributes.py  test_tags.py  test_utils.py  test_video.mov  test_wherefroms.py  test_xattr.py
utils/: build_help_table.py
