[tool.poetry]
name = "osxmetadata"
version = "1.2.2"
description = "Read and write meta data, such as tags/keywords, Finder comments, etc. on MacOS files"
authors = ["Rhet Turnbull <rturnbull+git@gmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/RhetTbull/osxmetadata"
repository = "https://github.com/RhetTbull/osxmetadata"
keywords = [
    "cli",
    "mac",
    "macos",
    "metadata",
    "tags",
    "osx",
    "spotlight",
    "extended_attributes",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
bitstring = "^3.1.9"
click = "^8.0"
py-applescript = "^1.0.3"
pyobjc-core = "^9.0.0"
pyobjc-framework-AppleScriptKit = "^9.0.0"
pyobjc-framework-AppleScriptObjC = "^9.0.0"
pyobjc-framework-AVFoundation = "^9.0.0"
pyobjc-framework-CoreMedia = "^9.0.0"
pyobjc-framework-Quartz = "^9.0.0"
twine = "^4.0.1"
wheel = "^0.37.1"
xattr = "^0.9.9"
pyobjc-framework-CoreServices = "^9.0.0"
pyobjc-framework-ScriptingBridge = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
build = "^0.8.0"
doit = "^0.36.0"
pyinstaller = "^5.6.2"
bump2version = "^1.0.1"
mkdocs = "^1.4.0"
mkdocstrings = { extras = ["python"], version = "^0.19.0" }
mkdocs-material = "^8.5.4"
wheel = "^0.37.1"
cogapp = "^3.3.0"
pytest-cov = "^4.0.0"
pytest-mypy = "^0.10.0"

[tool.poetry.scripts]
osxmetadata = "osxmetadata.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
