[project]
name = "osxmetadata"
version = "1.4.0"
description = "Read and write meta data, such as tags/keywords, Finder comments, etc. on MacOS files"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
authors = [
    { name = "Rhet Turnbull", email = "rturnbull+git@gmail.com" },
]
keywords = [
    "cli",
    "mac",
    "macos",
    "metadata",
    "tags",
    "osx",
    "spotlight",
    "extended_attributes",
]
dependencies = [
    "bitstring>=4.2.3,<5.0.0",
    "click>=8.0,<9.0",
    "py-applescript>=1.0.3,<2.0.0",
    "pyobjc-core>=9.0.0",
    "pyobjc-framework-AVFoundation>=9.0.0",
    "pyobjc-framework-AppleScriptKit>=9.0.0",
    "pyobjc-framework-AppleScriptObjC>=9.0.0",
    "pyobjc-framework-CoreMedia>=9.0.0",
    "pyobjc-framework-CoreServices>=9.0.0",
    "pyobjc-framework-Quartz>=9.0.0",
    "pyobjc-framework-ScriptingBridge>=9.0.0",
    "wheel>=0.41.2",
    "xattr>=0.10.1",
]

[project.urls]
Homepage = "https://github.com/RhetTbull/osxmetadata"
Repository = "https://github.com/RhetTbull/osxmetadata"

[project.scripts]
osxmetadata = "osxmetadata.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "build>=0.8.0",
    "bump2version>=1.0.1,<2.0.0",
    "cogapp>=3.3.0,<4.0.0",
    "doit>=0.36.0,<0.37.0",
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.5.44",
    "mkdocstrings>=0.27.0",
    "mkdocstrings-python>=1.12.2",
    "pyinstaller>=6.11.1,<=7.0",
    "pytest>=7.1.3,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-mypy>=0.10.0,<0.11.0",
    "twine>=4.0.1,<5.0.0",
]
